# paw_apis

./: pyproject.toml
mega_api/: jogos.py  mega.py
mega_api/templates/: base.html  multi.html  sena.html
validador_api/: validador.py
validador_api/templates/: upload_os.html
validador_api/validadores/: inplac.py  utils.py
